--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,22 @@
 .btn {
   border-radius: 10px;
   padding: 5px;
+  margin-top: 1em;
 }
+
+.length {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.width {
+  margin-bottom: 1em;
+}
+
+table {
+  margin-top: 1em;
+}
+
+/* table tr {
+  margin-bottom: 1.5em;
+} */
