--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,8 @@
 
 .btn {
   border-radius: 10px;
+  background-color: #61dafb;
+  border: none;
   padding: 5px;
   margin-top: 1em;
 }
@@ -54,6 +56,10 @@
 
 table {
   margin-top: 1em;
+}
+
+input {
+  border-radius: 0.3125rem;
 }
 
 /* table tr {
