fixed up some styling

--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,14 @@
   border-radius: 10px;
   background-color: #61dafb;
   border: none;
-  padding: 5px;
+  padding: 0.625rem;
   margin-top: 1em;
+}
+
+.btn:hover {
+  background-color: #006400;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .length {
