--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,7 @@ table {
 
 input {
   border-radius: 0.3125rem;
+  width: 3rem;
+  height: 3rem;
+  margin-bottom: 1.125rem;
 }
-
-/* table tr {
-  margin-bottom: 1.5em;
-} */
